added cloudinary config and image storage