@@ -6,22 +6,24 @@ import com.krishiYatra.krishiYatra.farmer.FarmerRepo;
 import com.krishiYatra.krishiYatra.stock.category.CategoryEntity;
 import com.krishiYatra.krishiYatra.stock.category.CategoryRepo;
 import com.krishiYatra.krishiYatra.stock.dao.IStockDao;
-import com.krishiYatra.krishiYatra.stock.dto.StockRequestDto;
-import com.krishiYatra.krishiYatra.stock.dto.StockListResponse;
-import com.krishiYatra.krishiYatra.stock.dto.StockResponseDto;
+import com.krishiYatra.krishiYatra.stock.dto.*;
 import com.krishiYatra.krishiYatra.stock.mapper.StockMapper;
 import com.krishiYatra.krishiYatra.stock.subCategory.SubCategoryEntity;
 import com.krishiYatra.krishiYatra.stock.subCategory.SubCategoryRepo;
 import lombok.RequiredArgsConstructor;
+import com.krishiYatra.krishiYatra.common.enums.VerificationStatus;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -34,6 +36,7 @@ public class StockService {
     private final SubCategoryRepo subCategoryRepo;
     private final StockMapper stockMapper;
     private final IStockDao stockDao;
+    private final com.krishiYatra.krishiYatra.config.CloudinaryService cloudinaryService;
 
     private FarmerEntity getCurrentFarmer() {
         String username = SecurityContextHolder.getContext().getAuthentication().getName();
@@ -42,9 +45,9 @@ public class StockService {
     }
 
     @Transactional
-    public ServerResponse createStock(StockRequestDto dto) {
+    public ServerResponse createStock(StockRequestDto dto, MultipartFile[] images) {
         FarmerEntity farmer = getCurrentFarmer();
-        if (!farmer.isVerified()) {
+        if (farmer.getStatus() != VerificationStatus.VERIFIED) {
             return ServerResponse.failureResponse(StockConst.FARMER_NOT_VERIFIED, HttpStatus.FORBIDDEN);
         }
 
@@ -58,18 +61,39 @@ public class StockService {
         entity.setCategory(category);
         entity.setSubCategory(subCategory);
 
+        if (images != null && images.length > 0) {
+            log.info("Creating stock with {} images", images.length);
+            List<String> imageUrls = new ArrayList<>();
+            for (var img : images) {
+                if (img != null && !img.isEmpty()) {
+                    try {
+                        String url = cloudinaryService.uploadFile(img, "stocks");
+                        imageUrls.add(url);
+                        log.info("Uploaded to Cloudinary: {}", url);
+                    } catch (Exception e) {
+                        log.error("Failed to upload stock image", e);
+                    }
+                }
+            }
+            List<StockImageEntity> batch = new ArrayList<>();
+            for (int i = 0; i < imageUrls.size(); i++) {
+                batch.add(new StockImageEntity(imageUrls.get(i), entity, i));
+            }
+            entity.setStockImages(batch);
+        }
+
         stockRepo.save(entity);
         return ServerResponse.successResponse(StockConst.CREATE_STOCK, HttpStatus.CREATED);
     }
 
     @Transactional
-    public ServerResponse updateStock(StockRequestDto dto) {
+    public ServerResponse updateStock(StockRequestDto dto, MultipartFile[] images) {
         if (dto.getStockSlug() == null || dto.getStockSlug().isEmpty()) {
             return ServerResponse.failureResponse("Stock slug is required for update.", HttpStatus.BAD_REQUEST);
         }
 
         FarmerEntity farmer = getCurrentFarmer();
-        if (!farmer.isVerified()) {
+        if (farmer.getStatus() != VerificationStatus.VERIFIED) {
             return ServerResponse.failureResponse(StockConst.FARMER_NOT_VERIFIED, HttpStatus.FORBIDDEN);
         }
 
@@ -89,6 +113,30 @@ public class StockService {
         entity.setCategory(category);
         entity.setSubCategory(subCategory);
 
+        if (images != null && images.length > 0) {
+            log.info("Updating stock {} with {} images", entity.getStockName(), images.length);
+            List<String> imageUrls = new ArrayList<>();
+            for (var img : images) {
+                if (img != null && !img.isEmpty()) {
+                    try {
+                        String url = cloudinaryService.uploadFile(img, "stocks");
+                        imageUrls.add(url);
+                        log.info("Uploaded to Cloudinary: {}", url);
+                    } catch (Exception e) {
+                        log.error("Failed to upload stock image during update", e);
+                    }
+                }
+            }
+            if (!imageUrls.isEmpty()) {
+                System.out.println("DEBUG (Service): Successfully uploaded " + imageUrls.size() + " photos to Cloudinary");
+                entity.getStockImages().clear();
+                for (int i = 0; i < imageUrls.size(); i++) {
+                    entity.getStockImages().add(new StockImageEntity(imageUrls.get(i), entity, i));
+                }
+            }
+        }
+        
+        System.out.println("DEBUG (Final): Stock Entity now has " + entity.getStockImages().size() + " image rows");
         stockRepo.save(entity);
         return ServerResponse.successResponse(StockConst.UPDATE_STOCK, HttpStatus.OK);
     }
@@ -96,8 +144,11 @@ public class StockService {
     @Transactional
     public ServerResponse deleteStockBySlug(String slug) {
         FarmerEntity farmer = getCurrentFarmer();
-        StockEntity entity = stockRepo.findByStockSlug(slug)
-                .orElseThrow(() -> new RuntimeException(StockConst.STOCK_NOT_FOUND));
+        var entityOptional = stockRepo.findByStockSlug(slug);
+        if (entityOptional.isEmpty()) {
+            return ServerResponse.failureResponse(StockConst.STOCK_NOT_FOUND, HttpStatus.NOT_FOUND);
+        }
+        StockEntity entity = entityOptional.get();
 
         if (!entity.getFarmer().getFarmerId().equals(farmer.getFarmerId())) {
             return ServerResponse.failureResponse("You are not authorized to delete this stock.", HttpStatus.UNAUTHORIZED);
@@ -110,8 +161,11 @@ public class StockService {
     }
 
     public ServerResponse getStockBySlug(String slug) {
-        StockEntity entity = stockRepo.findByStockSlug(slug)
-                .orElseThrow(() -> new RuntimeException(StockConst.STOCK_NOT_FOUND));
+        var entityOptional = stockRepo.findByStockSlug(slug);
+        if (entityOptional.isEmpty()) {
+            return ServerResponse.failureResponse(StockConst.STOCK_NOT_FOUND, HttpStatus.NOT_FOUND);
+        }
+        StockEntity entity = entityOptional.get();
 
         StockResponseDto responseDto = stockMapper.toResponseDto(entity);
         return ServerResponse.successObjectResponse(StockConst.FETCH_STOCK, HttpStatus.OK, responseDto);
@@ -119,69 +173,81 @@ public class StockService {
 
     @Transactional
     public ServerResponse toggleStockStatus(String slug) {
-        StockEntity entity = stockRepo.findByStockSlug(slug)
-                .orElseThrow(() -> new RuntimeException(StockConst.STOCK_NOT_FOUND));
+        var entityOptional = stockRepo.findByStockSlug(slug);
+        if (entityOptional.isEmpty()) {
+            return ServerResponse.failureResponse(StockConst.STOCK_NOT_FOUND, HttpStatus.NOT_FOUND);
+        }
+        StockEntity entity = entityOptional.get();
 
         entity.setActive(!entity.isActive());
         stockRepo.save(entity);
-        
-        String action = entity.isActive() ? "unblocked" : "blocked";
-        return ServerResponse.successResponse("Stock " + action + " successfully.", HttpStatus.OK);
+
+        return ServerResponse.successResponse("Stock status updated successfully.", HttpStatus.OK);
     }
 
     public ServerResponse getStockList(Map<String, String> params) {
         List<StockListResponse> stocks = stockDao.getAllStocks(params);
-        return ServerResponse.successObjectResponse(StockConst.FETCH_STOCK, HttpStatus.OK, stocks, stocks.size());
+        return ServerResponse.successObjectResponse(StockConst.FETCH_STOCK, HttpStatus.OK, stocks);
     }
 
     public ServerResponse getFarmerStocks() {
         FarmerEntity farmer = getCurrentFarmer();
-        Map<String, String> params = new HashMap<>();
-        params.put("farmerId", farmer.getFarmerId());
-        params.put("all", "true"); 
-        
-        List<StockListResponse> stocks = stockDao.getAllStocks(params);
-        return ServerResponse.successObjectResponse(StockConst.FETCH_STOCK, HttpStatus.OK, stocks, stocks.size());
+        List<StockEntity> stocks = stockRepo.findByFarmer_FarmerId(farmer.getFarmerId());
+        List<StockListResponse> response = stocks.stream()
+                .map(stockMapper::toListResponse)
+                .collect(Collectors.toList());
+        return ServerResponse.successObjectResponse(StockConst.FETCH_STOCK, HttpStatus.OK, response);
     }
 
     @Transactional
     public ServerResponse createCategory(String name) {
-        CategoryEntity cat = new CategoryEntity();
-        cat.setCategoryName(name);
-        categoryRepo.save(cat);
+        CategoryEntity category = new CategoryEntity();
+        category.setCategoryName(name);
+        categoryRepo.save(category);
         return ServerResponse.successResponse("Category created successfully", HttpStatus.CREATED);
     }
 
     @Transactional
-    public ServerResponse createSubCategory(String catId, String name) {
-        CategoryEntity cat = categoryRepo.findById(catId)
+    public ServerResponse createSubCategory(String categoryId, String name) {
+        CategoryEntity category = categoryRepo.findById(categoryId)
                 .orElseThrow(() -> new RuntimeException("Category not found"));
-        SubCategoryEntity sub = new SubCategoryEntity();
-        sub.setSubCategoryName(name);
-        sub.setCategory(cat);
-        subCategoryRepo.save(sub);
+        SubCategoryEntity subCategory = new SubCategoryEntity();
+        subCategory.setSubCategoryName(name);
+        subCategory.setCategory(category);
+        subCategoryRepo.save(subCategory);
         return ServerResponse.successResponse("Sub-category created successfully", HttpStatus.CREATED);
     }
 
     public ServerResponse getCategories() {
-        List<com.krishiYatra.krishiYatra.stock.dto.CategoryResponseDto> dtos = categoryRepo.findAll().stream()
+        List<CategoryResponseDto> categories = categoryRepo.findAll().stream()
                 .map(stockMapper::toCategoryDto)
-                .toList();
-        return ServerResponse.successObjectResponse("Categories fetched", HttpStatus.OK, dtos);
+                .collect(Collectors.toList());
+        return ServerResponse.successObjectResponse("Categories fetched successfully", HttpStatus.OK, categories);
     }
 
-    public ServerResponse getSubCategories(String catId) {
-        if (catId != null) {
-            CategoryEntity cat = categoryRepo.findById(catId)
-                    .orElseThrow(() -> new RuntimeException("Category not found"));
-            List<com.krishiYatra.krishiYatra.stock.dto.SubCategoryResponseDto> dtos = cat.getSubCategories().stream()
-                    .map(stockMapper::toSubCategoryDto)
-                    .toList();
-            return ServerResponse.successObjectResponse("Sub-categories fetched", HttpStatus.OK, dtos);
+    public ServerResponse getSubCategories(String categoryId) {
+        List<SubCategoryEntity> subCategories;
+        if (categoryId != null && !categoryId.isEmpty()) {
+            subCategories = subCategoryRepo.findByCategory_CategoryId(categoryId);
+        } else {
+
+            subCategories = subCategoryRepo.findAll();
         }
-        List<com.krishiYatra.krishiYatra.stock.dto.SubCategoryResponseDto> dtos = subCategoryRepo.findAll().stream()
+        List<SubCategoryResponseDto> response = subCategories.stream()
                 .map(stockMapper::toSubCategoryDto)
-                .toList();
-        return ServerResponse.successObjectResponse("All Sub-categories fetched", HttpStatus.OK, dtos);
+                .collect(Collectors.toList());
+        return ServerResponse.successObjectResponse("Sub-categories fetched successfully", HttpStatus.OK, response);
+    }
+
+    @Transactional
+    public ServerResponse adjustStockQuantity(String slug, Double amount) {
+        StockEntity entity = stockRepo.findByStockSlug(slug)
+                .orElseThrow(() -> new RuntimeException(StockConst.STOCK_NOT_FOUND));
+        
+        entity.setQuantity(entity.getQuantity() + amount);
+        if (entity.getQuantity() < 0) entity.setQuantity(0.0);
+        
+        stockRepo.save(entity);
+        return ServerResponse.successResponse("Stock quantity adjusted", HttpStatus.OK);
     }
 }
